# ME326-Group-8

./: .gitignore  README.md  module_flow_diagram.drawio  state_machine_task_planning.drawio
action_client/: CMakeLists.txt  package.xml
action_client/action_client/: attach_client.py  move_arm_named_pose_client.py  move_base_client.py  perception_client.py  pick_or_place_client.py
action_client/scripts/: client_server.py
apriltag_ros/cfg/: tags_36h11.yaml
apriltag_ros/launch/: apriltag.launch.py
apriltag_ros/src/: AprilTagNode.cpp
final_project/: package.xml  setup.py
final_project/config/: final_project.rviz
final_project/final_project/: client_server.py  dummy_subscriber.py  pose_estimator.py  state_machine.py  static_frame_broadcaster.py  world_publisher.py
final_project/launch/: closest_block_name.py  cube_name_location.yaml  project.launch.py  project_launcher.py  spawn_april_tags.launch.py  spawn_april_tags2.launch.py  spawn_cube.launch  spawn_cube.launch.py  spawn_cube2.launch.py  spawn_cube_launcher.py
final_project/model/: blue_cube.urdf  green_cube.urdf  red_cube.urdf  yellow_cube.urdf
final_project/pattern/: own_pattern.yaml  own_pattern2.yaml
final_project/worlds/: final_project.world
gazebo_apriltag/models/Apriltag36_11_00000/: model.sdf
gazebo_apriltag/models/Apriltag36_11_00001/: model.sdf
gazebo_apriltag/models/Apriltag36_11_00002/: model.sdf
gazebo_apriltag/models/Apriltag36_11_00003/: model.sdf
gazebo_apriltag/models/Apriltag36_11_00004/: model.sdf
gazebo_apriltag/models/Apriltag36_11_00005/: model.sdf
gazebo_apriltag/models/Apriltag36_11_00006/: model.sdf
gazebo_apriltag/models/Apriltag36_11_00007/: model.sdf
gazebo_apriltag/models/Apriltag36_11_00008/: model.sdf
gazebo_apriltag/models/Apriltag36_11_00009/: model.sdf
gazebo_apriltag/models/Apriltag36_11_00010/: model.sdf
gazebo_apriltag/models/Apriltag36_11_00011/: model.sdf
gazebo_apriltag/models/Apriltag36_11_00012/: model.sdf
gazebo_apriltag/models/Apriltag36_11_00013/: model.sdf
gazebo_apriltag/models/Apriltag36_11_00014/: model.sdf
gazebo_apriltag/models/Apriltag36_11_00015/: model.sdf
gazebo_ros_link_attacher/: CMakeLists.txt
move_group_interface/: CMakeLists.txt  package.xml
move_group_interface/src/: arm_pick_or_place_server.cpp  move_arm_named_pose_action_server.cpp
perception/: CMakeLists.txt  package.xml
perception/la_msgs/: CMakeLists.txt
perception/la_msgs/srv/: Ptps.srv
perception/locobot_autonomy/: CMakeLists.txt
perception/locobot_autonomy/src/: visual_block_perception_srv.cpp
perception/src/: visual_block_perception_srv.cpp
pose_traj_controller/: CMakeLists.txt  package.xml
pose_traj_controller/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
pose_traj_controller/install/pose_traj_controller/include/pose_traj_controller/action/: move_to_pose.h
pose_traj_controller/install/pose_traj_controller/include/pose_traj_controller/action/detail/: move_to_pose__functions.c  move_to_pose__rosidl_typesupport_fastrtps_c.h  move_to_pose__rosidl_typesupport_fastrtps_cpp.hpp  move_to_pose__rosidl_typesupport_introspection_c.h  move_to_pose__struct.h  move_to_pose__traits.hpp  move_to_pose__type_support.h
pose_traj_controller/install/pose_traj_controller/include/pose_traj_controller/msg/: rosidl_typesupport_fastrtps_cpp__visibility_control.h
pose_traj_controller/install/pose_traj_controller/share/ament_index/resource_index/package_run_dependencies/: pose_traj_controller
pose_traj_controller/install/pose_traj_controller/share/pose_traj_controller/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
pose_traj_controller/install/pose_traj_controller/share/pose_traj_controller/action/: MoveToPose.idl
pose_traj_controller/install/pose_traj_controller/share/pose_traj_controller/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  pose_traj_controller__rosidl_generator_cExport.cmake  pose_traj_controller__rosidl_typesupport_cExport-noconfig.cmake  pose_traj_controller__rosidl_typesupport_cExport.cmake  pose_traj_controller__rosidl_typesupport_cppExport-noconfig.cmake  pose_traj_controller__rosidl_typesupport_cppExport.cmake  pose_traj_controller__rosidl_typesupport_introspection_cExport-noconfig.cmake  pose_traj_controller__rosidl_typesupport_introspection_cExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
pose_traj_controller/log/: latest_build
pose_traj_controller/pose_traj_controller/: pose_traj_controller
project_messages/: CMakeLists.txt  package.xml
project_messages/action/: MoveArmToNamedPose.action  MoveToPose.action  PickOrPlace.action
