<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_client</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dylan@todo.todo">dylan</maintainer>
  <license>TODO: License declaration</license>


  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>project_messages</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
